<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundAltDark"
        android:baselineAligned="false"
        android:fitsSystemWindows="true">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:minHeight="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="80dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_list_header"
                    android:textColor="@color/textDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_list_subheader"
                    android:textColor="@color/textAltDark"
                    android:textSize="20sp" />

            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_btn"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchLocation"
                style="@style/InputField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:autofillHints="name"
                android:background="@null"
                android:elevation="10dp"
                android:hint="@string/location_list_search"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnSearchTitle"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@null"
                android:contentDescription="@string/search_voidLocation"
                android:foregroundTint="@color/textDark"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_round_search_24"
                app:tint="@color/textDark" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locationListRecyclerView"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:gravity="center"
        android:scaleType="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/empty_view"
        android:layout_gravity="center_horizontal|bottom"
        layout="@layout/empty_view"
        android:layout_height="500dp"
        android:layout_width="match_parent">
    </include>

</androidx.coordinatorlayout.widget.CoordinatorLayout>